--- a/src/templates/avia/_header.html
+++ b/src/templates/avia/_header.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>AVIA</title>
     <link rel="stylesheet" href="{% static "css/foundation.min.css" %}">
-     <link rel="stylesheet" href="{% static "css/app.css" %}">
+    <link rel="stylesheet" href="{% static "css/app.css" %}">
 </head>
 <body>
+<div class="callout large">
+    <div class="row column">
+        <h1>AVIA</h1>
