--- a/src/templates/avia/results.html
+++ b/src/templates/avia/results.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Results</title>
-</head>
-<body>
+ %{ include "avia/_header.html" %}
 
-</body>
-</html>
+<div class="row">
+    <div class="medium-12 columns">
+{#        {% context %}#}
+    </div>
+</div>
+
+{% include "avia/_footer.html" %}
+
