--- a/src/templates/avia/_form.html
+++ b/src/templates/avia/_form.html
@@ -1,4 +1,5 @@
 <form method="POST" action="{% url "avia_create" %}">
+    {{ form.errors }}
     <div class="grid-container">
         <div class="grid-x grid-padding-x">
             <div class="medium-12 cell">
